Update arg descriptor generation and op definitions for TF