@@ -1,14 +1,20 @@
 package org.nd4j.gen.proposal.utils;
 
+import com.github.javaparser.resolution.declarations.ResolvedParameterDeclaration;
+import lombok.val;
 import org.apache.commons.text.similarity.LevenshteinDistance;
-import org.nd4j.common.primitives.Pair;
+import org.nd4j.autodiff.samediff.SDVariable;
+import org.nd4j.common.base.Preconditions;
+import org.nd4j.common.primitives.*;
 import org.nd4j.gen.OpDeclarationDescriptor;
 import org.nd4j.gen.proposal.ArgDescriptorProposal;
 import org.nd4j.ir.OpNamespace;
+import org.nd4j.linalg.api.ndarray.INDArray;
 
 import java.lang.reflect.Field;
 import java.lang.reflect.Modifier;
 import java.util.*;
+import java.util.concurrent.atomic.AtomicInteger;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
@@ -16,22 +22,12 @@ import java.util.stream.Collectors;
 public class ArgDescriptorParserUtils {
     public final static String DEFAULT_OUTPUT_FILE = "op-ir.proto";
     public final static Pattern numberPattern = Pattern.compile("\\([\\d]+\\)");
-    /**
-     *     void addTArgument(double... arg);
-     *
-     *     void addIArgument(int... arg);
-     *
-     *     void addIArgument(long... arg);
-     *
-     *     void addBArgument(boolean... arg);
-     *
-     *     void addDArgument(DataType... arg);
-     */
 
-    public final static String ADD_T_ARGUMENT_INVOCATION = "addTArgument";
-    public final static String ADD_I_ARGUMENT_INVOCATION = "addIArgument";
-    public final static String ADD_B_ARGUMENT_INVOCATION = "addBArgument";
-    public final static String ADD_D_ARGUMENT_INVOCATION = "addDArgument";
+
+    public final static String ARGUMENT_ENDING_PATTERN = "\\([\\w\\d+-\\\\*\\/]+\\);";
+    public final static String ARGUMENT_PATTERN = "\\([\\w\\d+-\\\\*\\/]+\\)";
+
+    public final static String ARRAY_ASSIGNMENT = "\\w+\\[[a-zA-Z]+\\]\\s*=\\s*[A-Z]+_[A-Z]+\\(\\s*[\\d\\w+-\\/\\*\\s]+\\);";
 
     public static final Set<String> cppTypes = new HashSet<String>() {{
         add("int");
@@ -58,6 +54,7 @@ public class ArgDescriptorParserUtils {
         add("jaxis");
         add("inPlace");
     }};
+
     public final static  Set<String> fieldNameFiltersDynamicCustomOps = new HashSet<String>() {{
         add("sameDiff");
         add("xVertexId");
@@ -72,7 +69,7 @@ public class ArgDescriptorParserUtils {
         add("inplaceCall");
     }};
 
-    private static Map<String,String> equivalentAttributeNames = new HashMap<String,String>() {{
+    public static Map<String,String> equivalentAttributeNames = new HashMap<String,String>() {{
         put("axis","dimensions");
         put("dimensions","axis");
         put("jaxis","dimensions");
@@ -82,32 +79,99 @@ public class ArgDescriptorParserUtils {
     }};
 
 
-    private static Set<String> dimensionNames = new HashSet<String>() {{
+    public static Set<String> dimensionNames = new HashSet<String>() {{
         add("jaxis");
         add("axis");
         add("dimensions");
         add("dimensionz");
         add("dim");
         add("axisVector");
+        add("axesI");
+        add("ax");
+        add("dims");
+        add("axes");
     }};
 
-    private static Set<String> inputNames = new HashSet<String>() {{
+    public static Set<String> inputNames = new HashSet<String>() {{
         add("input");
         add("inputs");
         add("i_v");
         add("x");
+        add("in");
+        add("args");
+        add("i_v1");
+        add("first");
+        add("inArrs");
+        add("layerInput");
+        add("in1");
+    }};
+    public static Set<String> input2Names = new HashSet<String>() {{
+        add("y");
+        add("i_v2");
+        add("second");
+        add("in2");
     }};
 
-    private static Set<String> outputNames = new HashSet<String>() {{
+    public static Set<String> outputNames = new HashSet<String>() {{
         add("output");
         add("outputs");
+        add("out");
+        add("result");
+        add("z");
+        add("outputArrays");
     }};
 
 
-    private static Set<String> inplaceNames = new HashSet<String>() {{
+    public static Set<String> inplaceNames = new HashSet<String>() {{
         add("inPlace");
         add("inplaceCall");
     }};
+
+
+    public static OpNamespace.ArgDescriptor.ArgType argTypeForParam(ResolvedParameterDeclaration parameterDeclaration) {
+        String type = parameterDeclaration.describeType();
+        if(type.contains(INDArray.class.getName()) || type.contains(SDVariable.class.getName())) {
+            if(!outputNames.contains(parameterDeclaration.getName())) {
+                return OpNamespace.ArgDescriptor.ArgType.INPUT_TENSOR;
+            }
+            else return OpNamespace.ArgDescriptor.ArgType.OUTPUT_TENSOR;
+        } else if(type.contains(double.class.getName()) || type.contains(float.class.getName()) || type.contains(Float.class.getName()) || type.contains(Double.class.getName())) {
+            return OpNamespace.ArgDescriptor.ArgType.DOUBLE;
+        } else if(type.contains(int.class.getName()) || type.contains(long.class.getName()) || type.contains(Integer.class.getName()) || type.contains(Long.class.getName())) {
+            return OpNamespace.ArgDescriptor.ArgType.INT64;
+        } else if(type.contains(boolean.class.getName()) || type.contains(Boolean.class.getName())) {
+            return OpNamespace.ArgDescriptor.ArgType.BOOL;
+        } else {
+            return OpNamespace.ArgDescriptor.ArgType.UNRECOGNIZED;
+        }
+    }
+
+    public static boolean isValidParam(ResolvedParameterDeclaration param) {
+        return param.describeType().contains(INDArray.class.getName()) ||
+                param.describeType().contains(boolean.class.getName()) ||
+                param.describeType().contains(Boolean.class.getName()) ||
+                param.describeType().contains(SDVariable.class.getName()) ||
+                param.describeType().contains(Integer.class.getName()) ||
+                param.describeType().contains(int.class.getName()) ||
+                param.describeType().contains(double.class.getName()) ||
+                param.describeType().contains(Double.class.getName()) ||
+                param.describeType().contains(float.class.getName()) ||
+                param.describeType().contains(Float.class.getName()) ||
+                param.describeType().contains(Long.class.getName()) ||
+                param.describeType().contains(long.class.getName());
+    }
+
+    public static boolean typeNameOrArrayOfTypeNameMatches(String typeName,String...types) {
+        boolean ret = false;
+        for(String type : types) {
+            ret = typeName.equals(type) ||
+                    typeName.equals(type + "...") ||
+                    typeName.equals(type + "[]") || ret;
+
+        }
+
+        return ret;
+    }
 
 
     public static boolean equivalentAttribute(OpNamespace.ArgDescriptor comp1, OpNamespace.ArgDescriptor comp2) {
@@ -167,6 +231,9 @@ public class ArgDescriptorParserUtils {
     }
 
     public static boolean isValidIdentifier(String input) {
+        if(input == null || input.isEmpty())
+            return false;
+
         for(int i = 0; i < input.length(); i++) {
             if(!Character.isJavaIdentifierPart(input.charAt(i)))
                 return false;
@@ -265,6 +332,7 @@ public class ArgDescriptorParserUtils {
         String[] arrSplit = split[0].split(" ");
         //type + name
         String name = arrSplit[arrSplit.length - 1];
+        Preconditions.checkState(!name.isEmpty());
         if(!list.contains(name))
             list.add(name);
 
@@ -273,7 +341,19 @@ public class ArgDescriptorParserUtils {
             argIndices.add(index);
     }
 
-
+    public static void addArrayNameToList(String line, List<String> list, List<Integer> argIndices) {
+        String[] split = line.split(" = ");
+        String[] arrSplit = split[0].split(" ");
+        //type + name
+        String name = arrSplit[arrSplit.length - 1];
+        Preconditions.checkState(!name.isEmpty());
+        if(!list.contains(name))
+            list.add(name);
+        //arrays are generally appended to the end
+        Integer index =  - 1;
+        if(index != null)
+            argIndices.add(index);
+    }
 
     public static void standardizeTypes(List<ArgDescriptorProposal> input) {
         input.stream().forEach(proposal -> {
@@ -289,135 +369,351 @@ public class ArgDescriptorParserUtils {
         });
     }
 
+    public static ArgDescriptorProposal aggregateProposals(List<ArgDescriptorProposal> listOfProposals) {
+        val descriptorBuilder = OpNamespace.ArgDescriptor.newBuilder();
+        Counter<Integer> mostLikelyIndex = new Counter<>();
+
+        AtomicDouble aggregatedWeight = new AtomicDouble(0.0);
+        listOfProposals.forEach(proposal -> {
+            mostLikelyIndex.incrementCount(proposal.getDescriptor().getArgIndex(),1.0);
+            aggregatedWeight.addAndGet(proposal.getProposalWeight());
+            descriptorBuilder.setName(proposal.getDescriptor().getName());
+            descriptorBuilder.setIsArray(proposal.getDescriptor().getIsArray());
+            descriptorBuilder.setArgType(proposal.getDescriptor().getArgType());
+            descriptorBuilder.setConvertBoolToInt(proposal.getDescriptor().getConvertBoolToInt());
+            descriptorBuilder.setIsArray(proposal.getDescriptor().getIsArray());
+        });
+
+        //set the index after computing the most likely index
+        descriptorBuilder.setArgIndex(mostLikelyIndex.argMax());
+
+        return ArgDescriptorProposal
+                .builder()
+                .descriptor(descriptorBuilder.build())
+                .proposalWeight(aggregatedWeight.doubleValue())
+                .build();
+    }
+
     public static Map<Pair<Integer, OpNamespace.ArgDescriptor.ArgType>, OpNamespace.ArgDescriptor> standardizeNames
             (Map<String,List<ArgDescriptorProposal>> toStandardize) {
         Map<String,List<ArgDescriptorProposal>> ret = new HashMap<>();
-        List<ArgDescriptorProposal> dimensionsList = new ArrayList<>();
-        List<ArgDescriptorProposal> inPlaceList = new ArrayList<>();
-        List<ArgDescriptorProposal> inputsList = new ArrayList<>();
-        List<ArgDescriptorProposal> outputsList = new ArrayList<>();
-        for(Map.Entry<String,List<ArgDescriptorProposal>> entry : toStandardize.entrySet()) {
+        Map<Pair<Integer, OpNamespace.ArgDescriptor.ArgType>,List<ArgDescriptorProposal>> dimensionProposals = new HashMap<>();
+        Map<Pair<Integer, OpNamespace.ArgDescriptor.ArgType>,List<ArgDescriptorProposal>> inPlaceProposals = new HashMap<>();
+        Map<Pair<Integer, OpNamespace.ArgDescriptor.ArgType>,List<ArgDescriptorProposal>> inputsProposals = new HashMap<>();
+        Map<Pair<Integer, OpNamespace.ArgDescriptor.ArgType>,List<ArgDescriptorProposal>> inputs2Proposals = new HashMap<>();
+        Map<Pair<Integer, OpNamespace.ArgDescriptor.ArgType>,List<ArgDescriptorProposal>> outputsProposals = new HashMap<>();
+
+        toStandardize.entrySet().forEach(entry -> {
+            if(entry.getKey().isEmpty()) {
+                throw new IllegalStateException("Name must not be empty!");
+            }
+
             if(dimensionNames.contains(entry.getKey())) {
-                dimensionsList.addAll(entry.getValue());
+                extractProposals(dimensionProposals, entry);
             } else if(inplaceNames.contains(entry.getKey())) {
-                inPlaceList.addAll(entry.getValue());
+                extractProposals(inPlaceProposals, entry);
             } else if(inputNames.contains(entry.getKey())) {
-                inputsList.addAll(entry.getValue());
+                extractProposals(inputsProposals, entry);
+            }  else if(input2Names.contains(entry.getKey())) {
+                extractProposals(inputs2Proposals, entry);
             } else if(outputNames.contains(entry.getKey())) {
-                outputsList.addAll(entry.getValue());
+                extractProposals(outputsProposals, entry);
             }
             else {
                 ret.put(entry.getKey(),entry.getValue());
             }
+        });
+
+
+        /**
+         * Two core ops have issues:
+         * argmax and cumsum both have the same issue
+         * other boolean attributes are present
+         * that are converted to ints and get clobbered
+         * by dimensions having the wrong index
+         *
+         * For argmax, exclusive gets clobbered. It should have index 0,
+         * but for some reason dimensions gets index 0.
+         */
+
+
+        /**
+         * TODO: make this method return name/type
+         * combinations rather than just name/single list.
+         */
+        if(!dimensionProposals.isEmpty()) {
+            // List<Pair<Pair<Integer, OpNamespace.ArgDescriptor.ArgType>, ArgDescriptorProposal>> d
+            computeAggregatedProposalsPerType(ret, dimensionProposals, "dimensions");
         }
 
-        if(!dimensionsList.isEmpty()) {
-            for(ArgDescriptorProposal argDescriptorProposal : dimensionsList) {
-                argDescriptorProposal.setDescriptor(OpNamespace.ArgDescriptor.newBuilder()
-                        .setName("dimensions")
-                        .setArgType(argDescriptorProposal.getDescriptor().getArgType())
-                        .setArgIndex(argDescriptorProposal.getDescriptor().getArgIndex())
-                        .build());
+        if(!inPlaceProposals.isEmpty()) {
+            computeAggregatedProposalsPerType(ret, inPlaceProposals, "inPlace");
+        }
+
+        if(!inputsProposals.isEmpty()) {
+            computeAggregatedProposalsPerType(ret, inputsProposals, "input");
+
+        }
+
+        if(!inputs2Proposals.isEmpty()) {
+            computeAggregatedProposalsPerType(ret, inputs2Proposals, "y");
+
+        }
+
+        if(!outputsProposals.isEmpty()) {
+            computeAggregatedProposalsPerType(ret, outputsProposals, "outputs");
+        }
+
+        Map<Pair<Integer, OpNamespace.ArgDescriptor.ArgType>, OpNamespace.ArgDescriptor> ret2 = new HashMap<>();
+        Set<String> names = ret.keySet();
+        List<ArgDescriptorProposal> allProposals = new ArrayList<>();
+        CounterMap<Pair<Integer, OpNamespace.ArgDescriptor.ArgType>,ArgDescriptorProposal> proposalsByType = new CounterMap<>();
+        ret.values().forEach(input -> {
+            input.forEach(proposal1 -> {
+                proposalsByType.incrementCount(Pair.of(proposal1.getDescriptor().getArgIndex(),proposal1.getDescriptor().getArgType()),proposal1,proposal1.getProposalWeight());
+            });
+        });
+
+        ret.clear();
+        proposalsByType.keySet().stream().forEach(argTypeIndexPair -> {
+            val proposal = proposalsByType.getCounter(argTypeIndexPair).argMax();
+            val name = proposal.getDescriptor().getName();
+            List<ArgDescriptorProposal> proposalsForName;
+            if(!ret.containsKey(name)) {
+                proposalsForName = new ArrayList<>();
+                ret.put(name,proposalsForName);
             }
-            ret.put("dimensions",dimensionsList);
+            else
+                proposalsForName = ret.get(name);
+            proposalsForName.add(proposal);
+            ret.put(proposal.getDescriptor().getName(),proposalsForName);
+        });
 
-        }
-
-        if(!inPlaceList.isEmpty()) {
-            for(ArgDescriptorProposal argDescriptorProposal : inPlaceList) {
-                argDescriptorProposal.setDescriptor(OpNamespace.ArgDescriptor.newBuilder()
-                        .setName("inPlace")
-                        .setArgType(argDescriptorProposal.getDescriptor().getArgType())
-                        .setArgIndex(argDescriptorProposal.getDescriptor().getArgIndex()).build());
-            }
-            ret.put("inPlace",inPlaceList);
-        }
-
-        if(!inputsList.isEmpty()) {
-            for(ArgDescriptorProposal argDescriptorProposal : inputsList) {
-                argDescriptorProposal.setDescriptor(OpNamespace.ArgDescriptor.newBuilder()
-                        .setName("input")
-                        .setArgType(argDescriptorProposal.getDescriptor().getArgType())
-                        .setArgIndex(argDescriptorProposal.getDescriptor().getArgIndex()).build());
-            }
-            ret.put("input",inputsList);
-        }
-
-        if(!outputsList.isEmpty()) {
-            for(ArgDescriptorProposal argDescriptorProposal : outputsList) {
-                argDescriptorProposal.setDescriptor(OpNamespace.ArgDescriptor.newBuilder()
-                        .setName("output")
-                        .setArgType(argDescriptorProposal.getDescriptor().getArgType())
-                        .setArgIndex(argDescriptorProposal.getDescriptor().getArgIndex()).build());
-            }
-            ret.put("output",outputsList);
-        }
-
-        //de duplicate the same index/same type
-        Map<String,List<ArgDescriptorProposal>> deDedupped = new HashMap<>();
-        for(Map.Entry<String,List<ArgDescriptorProposal>> entry : toStandardize.entrySet()) {
-            Collections.sort(entry.getValue(),Comparator.comparingDouble(ArgDescriptorProposal::getProposalWeight));
-            deDedupped.put(entry.getKey(),Arrays.asList(entry.getValue().get(entry.getValue().size() - 1)));
-            Map<Integer, List<ArgDescriptorProposal>> collect = deDedupped.get(entry.getKey()).stream()
-                    .collect(Collectors.groupingBy(input -> input.getDescriptor().getArgIndex()));
-            collect.entrySet().forEach(input -> {
-                Map<String, List<ArgDescriptorProposal>> groupedByName = input.getValue().stream().collect(Collectors.groupingBy(descriptorProposal ->
-                        descriptorProposal.getDescriptor().getName()));
-                groupedByName.entrySet().forEach(groupedEntry -> {
-                    Collections.sort(groupedEntry.getValue(), Comparator.comparingDouble(ArgDescriptorProposal::getProposalWeight));
-                    //update list to single element only
-                    groupedByName.put(groupedEntry.getKey(),Arrays.asList(groupedEntry.getValue().get(groupedEntry.getValue().size() - 1)));
+        ret.forEach((name,proposals) -> {
+            val proposalsGroupedByType = proposals.stream().collect(Collectors.groupingBy(proposal -> proposal.getDescriptor().getArgType()));
+            List<ArgDescriptorProposal> maxProposalsForEachType = new ArrayList<>();
+            proposalsGroupedByType.forEach((type,proposalGroupByType) -> {
+                Counter<ArgDescriptorProposal> proposalsCounter = new Counter<>();
+                proposalGroupByType.forEach(proposalByType -> {
+                    proposalsCounter.incrementCount(proposalByType,proposalByType.getProposalWeight());
                 });
 
-
+                maxProposalsForEachType.add(proposalsCounter.argMax());
             });
-        }
 
-        Map<Pair<Integer, OpNamespace.ArgDescriptor.ArgType>,ArgDescriptorProposal> collect = new HashMap<>();
-        deDedupped.entrySet().forEach(entry -> {
-            /**
-             * TODO: KH should be index 0 but is 1 for some reason.
-             * sH should be 9 and should be correct now (op is avgpool2d)
-             */
-            OpNamespace.ArgDescriptor currDescriptor = entry.getValue().get(0).getDescriptor();
-            OpNamespace.ArgDescriptor.ArgType argType = currDescriptor.getArgType();
-            Integer index = currDescriptor.getArgIndex();
-            if(!collect.containsKey(Pair.of(index,argType))) {
-                if(entry.getValue().size() > 1) {
-                    ArgDescriptorProposal highestProposal = null;
-                    for(int i = 0; i < entry.getValue().size(); i++) {
-                        if(highestProposal == null || highestProposal.getProposalWeight() < entry.getValue().get(i).getProposalWeight()) {
-                            highestProposal = entry.getValue().get(i);
-                        }
-                        if(highestProposal.getDescriptor().getArgIndex() != index) {
-                            throw new IllegalArgumentException("Potential new highest proposal index " + highestProposal.getDescriptor().getArgIndex() + " does not match attempted key " + index);
+            proposals = maxProposalsForEachType;
 
-                        }
-                        collect.put(Pair.of(index,argType),highestProposal);
 
-                    }
-                } else {
-                    if(entry.getValue().get(0).getDescriptor().getArgIndex() != index) {
-                        throw new IllegalArgumentException("Potential new highest proposal index " + entry.getValue().get(0).getDescriptor().getArgIndex() + " does not match attempted key " + index);
-                    }
-                    collect.put(Pair.of(index,argType),entry.getValue().get(0));
+            //group by index and type
+            val collected = proposals.stream()
+                    .collect(Collectors.groupingBy(input -> Pair.of(input.getDescriptor().getArgIndex(),input.getDescriptor().getArgType())))
+                    .entrySet()
+                    .stream().map(input -> Pair.of(input.getKey(),
+                            aggregateProposals(input.getValue()).getDescriptor()))
+                    .collect(Collectors.toMap(pair -> pair.getKey(),pair -> pair.getValue()));
+            val groupedByType = collected.entrySet().stream().collect(Collectors.groupingBy(input -> input.getKey().getRight()));
+            groupedByType.forEach((argType,list) -> {
+                //count number of elements that aren't -1
+                int numGreaterThanNegativeOne = list.stream().map(input -> input.getKey().getFirst() >= 0 ? 1 : 0)
+                        .reduce(0,(a,b) -> a + b);
+                if(numGreaterThanNegativeOne > 1) {
+                    throw new IllegalStateException("Name of " + name + " with type " + argType + " not aggregated properly.");
                 }
+            });
 
+
+            val arrEntries = collected.entrySet().stream()
+                    .filter(pair -> pair.getValue().getIsArray())
+                    .collect(Collectors.toList());
+            //process arrays separately and aggregate by type
+            if(!arrEntries.isEmpty()) {
+                val initialType = arrEntries.get(0).getValue().getArgType();
+                val allSameType = new AtomicBoolean(true);
+                val negativeOnePresent = new AtomicBoolean(false);
+                arrEntries.forEach(entry -> {
+                    allSameType.set(allSameType.get() && entry.getValue().getArgType() == initialType);
+                    negativeOnePresent.set(negativeOnePresent.get() || entry.getValue().getArgIndex() == -1);
+                    //only remove if we see -1
+                    if(negativeOnePresent.get())
+                        collected.remove(entry.getKey());
+                });
+
+                if(allSameType.get() && negativeOnePresent.get()) {
+                    collected.put(Pair.of(-1,initialType), OpNamespace.ArgDescriptor.newBuilder()
+                            .setArgType(initialType)
+                            .setArgIndex(-1)
+                            .setIsArray(true)
+                            .setName(arrEntries.get(0).getValue().getName()).build());
+                }
+            }
+
+            ret2.putAll(collected);
+
+        });
+
+        Map<OpNamespace.ArgDescriptor.ArgType,Integer> maxIndex = new HashMap<>();
+        ret2.forEach((key,value) -> {
+            if(!maxIndex.containsKey(key.getRight())) {
+                maxIndex.put(key.getValue(),key.getFirst());
             } else {
-                ArgDescriptorProposal argDescriptorProposal = collect.get(Pair.of(index,argType));
-                ArgDescriptorProposal potentialNewOne = entry.getValue().get(0);
-                if(potentialNewOne.getDescriptor().getArgIndex() != index) {
-                    throw new IllegalArgumentException("Potential new arg descriptor index " + potentialNewOne.getDescriptor().getArgIndex() + " does not match attempted key " + index);
-                }
-                if(potentialNewOne.getProposalWeight() > argDescriptorProposal.getProposalWeight()) {
-                    collect.put(Pair.of(index,argType),potentialNewOne);
-                }
+                maxIndex.put(key.getValue(),Math.max(key.getFirst(),maxIndex.get(key.getValue())));
             }
         });
 
-        Map<Pair<Integer, OpNamespace.ArgDescriptor.ArgType>, OpNamespace.ArgDescriptor> ret2 = collect.entrySet().stream().collect(Collectors.toMap(entry -> entry.getKey(), entry -> entry.getValue().getDescriptor()));
+        //update -1 values to be valid indices relative to whatever the last index is when an array is found
+        //and -1 is present
+        Map<Pair<Integer, OpNamespace.ArgDescriptor.ArgType>, OpNamespace.ArgDescriptor> updateValues = new HashMap<>();
+        Set<Pair<Integer, OpNamespace.ArgDescriptor.ArgType>> removeKeys = new HashSet<>();
+        ret2.forEach((key,value) -> {
+            if(value.getArgIndex() < 0) {
+                removeKeys.add(key);
+                int maxIdx = maxIndex.get(value.getArgType());
+                updateValues.put(Pair.of(maxIdx + 1,value.getArgType()), OpNamespace.ArgDescriptor.newBuilder()
+                        .setName(value.getName())
+                        .setIsArray(value.getIsArray())
+                        .setArgType(value.getArgType())
+                        .setArgIndex(maxIdx + 1)
+                        .setConvertBoolToInt(value.getConvertBoolToInt())
+                        .build());
+            }
+        });
+
+        removeKeys.forEach(key -> ret2.remove(key));
+        ret2.putAll(updateValues);
         return ret2;
     }
 
+    private static void computeAggregatedProposalsPerType(Map<String, List<ArgDescriptorProposal>> ret, Map<Pair<Integer, OpNamespace.ArgDescriptor.ArgType>, List<ArgDescriptorProposal>> dimensionProposals, String name) {
+        List<ArgDescriptorProposal> dimensions = dimensionProposals.entrySet().stream().map(indexTypeAndList -> {
+            if(indexTypeAndList.getValue().isEmpty()) {
+                throw new IllegalStateException("Unable to compute aggregated proposals for an empty list");
+            }
+            OpNamespace.ArgDescriptor template = indexTypeAndList.getValue().get(0).getDescriptor();
+
+            int idx = indexTypeAndList.getKey().getFirst();
+            OpNamespace.ArgDescriptor.ArgType type = indexTypeAndList.getKey().getRight();
+            return Pair.of(indexTypeAndList.getKey(),
+                    ArgDescriptorProposal.builder()
+                            .sourceOfProposal("computedAggregate")
+                            .descriptor(OpNamespace.ArgDescriptor.newBuilder()
+                                    .setArgIndex(idx)
+                                    .setArgType(type)
+                                    .setName(name)
+                                    .setIsArray(template.getIsArray() || idx < 0)
+                                    .build())
+                            .proposalWeight(indexTypeAndList.getValue().stream()
+                                    .collect(Collectors.summingDouble(input -> input.getProposalWeight()))
+                            ).build());
+        }).map(input -> input.getSecond()).
+                collect(Collectors.toList());
+
+
+        ret.put(name,dimensions);
+    }
+
+    private static void extractProposals(Map<Pair<Integer, OpNamespace.ArgDescriptor.ArgType>, List<ArgDescriptorProposal>> inPlaceProposals, Map.Entry<String, List<ArgDescriptorProposal>> entry) {
+        entry.getValue().forEach(proposal -> {
+            List<ArgDescriptorProposal> proposals = null;
+            if (!inPlaceProposals.containsKey(extractKey(proposal))) {
+                proposals = new ArrayList<>();
+                inPlaceProposals.put(extractKey(proposal), proposals);
+            } else {
+                proposals = inPlaceProposals.get(extractKey(proposal));
+            }
+
+            proposals.add(proposal);
+            inPlaceProposals.put(extractKey(proposal), proposals);
+        });
+    }
+
+    /**
+     * Extract a key reflecting index and type of arg descriptor
+     * @param proposal the input proposal
+     * @return
+     */
+    public static Pair<Integer, OpNamespace.ArgDescriptor.ArgType> extractKey(ArgDescriptorProposal proposal) {
+        return Pair.of(proposal.getDescriptor().getArgIndex(),proposal.getDescriptor().getArgType());
+    }
+
+
+    public static boolean proposalsAllSameType(List<ArgDescriptorProposal> proposals) {
+        OpNamespace.ArgDescriptor.ArgType firstType = proposals.get(0).getDescriptor().getArgType();
+        for(ArgDescriptorProposal proposal : proposals) {
+            if(proposal.getDescriptor().getArgType() != firstType) {
+                return false;
+            }
+        }
+
+        return true;
+    }
+
+
+    private static List<ArgDescriptorProposal> mergeProposals(Map<String, List<ArgDescriptorProposal>> ret, List<ArgDescriptorProposal> dimensionsList, OpNamespace.ArgDescriptor.ArgType argType, String nameOfArgDescriptor) {
+        double priorityWeight = 0.0;
+        ArgDescriptorProposal.ArgDescriptorProposalBuilder newProposalBuilder = ArgDescriptorProposal.builder();
+        Counter<Integer> indexCounter = new Counter<>();
+        List<ArgDescriptorProposal> proposalsOutsideType = new ArrayList<>();
+        boolean allArrayType = true;
+        for(ArgDescriptorProposal argDescriptorProposal : dimensionsList) {
+            allArrayType = argDescriptorProposal.getDescriptor().getIsArray() && allArrayType;
+            //handle arrays separately
+            if(argDescriptorProposal.getDescriptor().getArgType() == argType) {
+                indexCounter.incrementCount(argDescriptorProposal.getDescriptor().getArgIndex(),1);
+                priorityWeight += argDescriptorProposal.getProposalWeight();
+            } else if(argDescriptorProposal.getDescriptor().getArgType() != argType) {
+                proposalsOutsideType.add(argDescriptorProposal);
+            }
+        }
+
+        dimensionsList.clear();
+        //don't add a list if one is not present
+        if(!indexCounter.isEmpty()) {
+            newProposalBuilder
+                    .proposalWeight(priorityWeight)
+                    .descriptor(
+                            OpNamespace.ArgDescriptor.newBuilder()
+                                    .setName(nameOfArgDescriptor)
+                                    .setArgType(argType)
+                                    .setIsArray(allArrayType)
+                                    .setArgIndex(indexCounter.argMax())
+                                    .build());
+
+            dimensionsList.add(newProposalBuilder.build());
+            ret.put(nameOfArgDescriptor, dimensionsList);
+        }
+
+        //standardize the names
+        proposalsOutsideType.forEach(proposalOutsideType -> {
+            proposalOutsideType.setDescriptor(
+                    OpNamespace.ArgDescriptor.newBuilder()
+                            .setName(nameOfArgDescriptor)
+                            .setArgType(proposalOutsideType.getDescriptor().getArgType())
+                            .setArgIndex(proposalOutsideType.getDescriptor().getArgIndex())
+                            .setIsArray(proposalOutsideType.getDescriptor().getIsArray())
+                            .setConvertBoolToInt(proposalOutsideType.getDescriptor().getConvertBoolToInt())
+                            .build()
+            );
+        });
+
+
+        return proposalsOutsideType;
+    }
+
+
+    public static boolean matchesArrayArgDeclaration(String testLine) {
+        boolean ret =  Pattern.matches(ARRAY_ASSIGNMENT,testLine);
+        return ret;
+    }
+
+    public static boolean matchesArgDeclaration(String argType,String testLine) {
+        Matcher matcher = Pattern.compile(argType + ARGUMENT_ENDING_PATTERN).matcher(testLine);
+        Matcher argOnly = Pattern.compile(argType + ARGUMENT_PATTERN).matcher(testLine);
+        // Matcher arrArg = Pattern.compile(argType + ARGUMENT_PATTERN)
+        boolean ret =  matcher.find();
+        boolean argOnlyResult = argOnly.find();
+        return ret || testLine.contains("?") && argOnlyResult || testLine.contains("static_cast") && argOnlyResult ||
+                testLine.contains("))") && argOnlyResult || testLine.contains("==") && argOnlyResult
+                || testLine.contains("->") && argOnlyResult;
+    }
 
 }
